# chatbot

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  RAG_manager.py  README.md  TODO.md  Testing_Plan.md  ask_questions.py  chatbot.py  config.json  config.py  discord_bot.py  docker-compose.yml  import_documents.py  ollama_helpers.py  pyproject.toml  questions.py  regenerate_database.py  requirements.txt  srt_splitter.py  telegram_bot.py  vector_database.py  video_links.py
.github/workflows/: docker-build.yml
analytics/: ANALYTICS_GUIDE.md  ask_all_questions.py  benchmark_vector_search.py  config.py  export.py  questions_for_testing.py  setup_database.py  test_cloud_limits.py  trace_viewer.py  user_trace_importer.py  vector_search_importer.py
analytics/db/: export.py  setup_database.py  trace_importer.py
analytics/scripts/: ask_all_questions.py  ask_questions.py  test_cloud_limits.py  trace_viewer.py  trace_viewer_old.py
bots/: telegram_bot.py
content_database/: config.py
content_database/docs/: channel_topics.md  gary_bio.md
content_database/docs/video_transcripts/pending_review/: Goodbye_and_Good_Luck.srt  How_to_live_in_a_collapsing_economy.srt
content_database/scripts/: collections_viewer.py  delete_collections.py  import_documents.py  srt_splitter.py  vector_database_manager.py
content_database/scripts/tests/: test_config.py  test_srt_splitter.py  test_vector_database.py
docs/: GpYBEG_2egc__2021-12-30_Why_Do_Newspapers_Want_you_to_Stop_Buying_Avocado_Toast.srt  sample.srt
interfaces/: chatbot.py  discord_bot.py  telegram_bot.py
llm/: langfuse_helpers.py  langfuse_manager.py  llm_manager.py  llm_providers_helpers.py  prompt_template.py
plan/: completed_tasks.md
plan/phase_1/: technical_issues.md
plan/phase_2/: Phase_2_Plan.md  Phase_2_tech_decisions.md  data_sources.md  evaluation_pipeline_plan.md  migration_plan.md
plan/phase_2/prompt/: prompt_issues.md  prompt_v3.md  prompt_v3_1.md  prompt_v4.md
rag/: RAG_manager.py  langfuse_helpers.py  rag_manager.py  video_links.py
src/: config.py
src/interfaces/: chunker.py  discord_bot.py  telegram_bot.py
src/llm/: llm_manager.py  prompt_template.py  prompt_versions.py
src/rag/: langfuse_helpers.py  rag_manager.py  vector_database.py  video_links.py
src/vector_database/: import_documents.py
testing_phase_1/: Phase_1_Report.md  Testing Phase 1 Plan.md  latency_report_chat_model.md  latency_report_embeddings.md  prompt_issues.md
tests/: conftest.py  questions_for_testing.py  test_RAG_manager.py  test_ask_questions.py  test_chatbot.py  test_config.py  test_discord_bot.py  test_fetch_langfuse_traces.py  test_langfuse.py  test_llm_manager.py  test_llm_providers_helpers.py  test_ollama_helpers.py  test_openai_provider.py  test_prompt_template.py  test_rag_manager.py  test_setup_database.py  test_srt_splitter.py  test_telegram_bot.py  test_trace_viewer.py  test_user_trace_importer.py  test_vector_database.py  test_video_links.py
tests/test-data/: long-answer.md  long-question.md
vector_database/: collections_viewer.py  import_documents.py  srt_splitter.py  vector_database.py  vector_database_manager.py
