[project]
name = "garys-economics-chatbot"
version = "0.1.0"
description = "A RAG chatbot that answers economics questions by referencing Gary's Economics YouTube videos."
license = "GPL-3.0-or-later"
requires-python = ">=3.11,<3.14.1"
dependencies = [
    "chromadb",
    "discord.py",
    "langchain",
    "langfuse>=3,<4",
    "langchain-chroma",
    "langchain-community",
    "langchain-ollama",
    "langchain-text-splitters",
    "langgraph",
    "ollama",
    "pysrt",

    "pydantic-settings",
    "python-telegram-bot",
    "chonkie",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["./src"]
testpaths = ["tests"]
markers = [
    "langfuse: tests that require a running Langfuse server and credentials",
]
# Filter third-party warnings we can't fix:
# - audioop: discord.py imports it for voice support, deprecated in Python 3.13
# - RequestsDependencyWarning: chardet/urllib3 versions newer than requests expects
filterwarnings = [
    "ignore:'audioop' is deprecated:DeprecationWarning",
    "ignore:urllib3.*doesn't match a supported version:requests.exceptions.RequestsDependencyWarning",
]
